Update and rename player.index.htm to player.htm

--- a/player.htm
+++ b/player.htm
@@ -1,3 +1,10 @@
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>JS music player</title>
+  <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  </head>
 <div class="wrapper">
   <div class="album"></div>
   <div class="info">
@@ -27,3 +34,4 @@
 <audio id="audio">
   <source src="https://cdnm.meln.top/mx/Imagine%20Dragons%20-%20Birds.mp3?hash=NDc0NDk5MTMxLzQ1NjQ2MDYxNC5tcDM=" type="audio/mpeg">
 </audio>
+</html>
