--- a/player.htm
+++ b/player.htm
@@ -3,6 +3,7 @@
   <head>
     <title>JS music player</title>
   <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
+    <script src="player.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
 <div class="wrapper">
